stats-preview-card-component-main/css/styles.css
/*
=============
Global styles
=============
*/

* {
  box-sizing: border-box;
}

:root {
  /* Primary colors */
  --cl-p-mainBackground: hsl(233, 47%, 7%);
  --cl-p-cardBackground: hsl(244, 38%, 16%);
  --cl-p-accent: hsl(277, 64%, 61%);
  /* Secundary colors */
  --cl-s-mainHeading-Stats: hsl(0, 0%, 100%);
  --cl-s-mainParagraph: hsla(0, 0%, 100%, 0.75);
  -cl-s-statheadings: hsla(0, 0%, 100%, 0.6);
  /* font family */
  --ff-heading: 'Inter', sans-sarif;
  --ff-body: 'Lexend Deca', sans-sarif;
  /* other variables */
  --borderRadius: 0.75rem;
  --letterSpacing: 1px;
  --lineHight: 1.5;
  --transition: 0.3s ease-in-out all;
  /* box shadow*/
  --shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
  --shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
    0 2px 4px -1px rgba(0, 0, 0, 0.06);
  --shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
    0 4px 6px -2px rgba(0, 0, 0, 0.05);
  --shadow-4: 0 20px 25px -5px rgb(56, 41, 224, 0.1),
    0 10px 10px -5px rgb(56, 41, 224, 0.4);
}

/*
=============
Base styles
=============
*/
html {
  font-size: 75%;
}
body {
  background-color: var(--cl-p-mainBackground);
  color: var(--cl-s-mainParagraph);
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: var(--ff-body);
  letter-spacing: var(--letterSpacing);
}
h1,
h2 {
  color: var(--cl-s-mainHeading-Stats);
  font-family: var(--ff-heading);
}
h2 {
  margin-bottom: 5px;
}
strong {
  color: var(--cl-p-accent);
}
p {
  line-height: var(--lineHight);
  font-weight: 400;
  letter-spacing: normal;
  max-width: 90%;
  margin: auto;
}
span {
  text-transform: uppercase;
  color: var(--cl-s-s);
  font-size: 0.85rem;
}
/*
=============
Card styles
=============
*/

.card {
  background-color: var(--cl-p-cardBackground);
  max-width: 275px;
  text-align: center;
  border-radius: var(--borderRadius);
  margin: 10px;
}
.card_imgHolder {
  position: relative;
  height: 200px;
  border-top-right-radius: var(--borderRadius);
  border-top-left-radius: var(--borderRadius);
  background-image: url(../images/image-header-mobile.jpg);
  background-repeat: no-repeat;
  background-size: cover;
}
.card_imgHolder::after {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-color: var(--cl-p-accent);
  opacity: 0.5;
  border-top-right-radius: var(--borderRadius);
  border-top-left-radius: var(--borderRadius);
}
.card_content {
  padding: 20px;
}
.stats_box {
  margin: 20px 0;
}

/*
=============
Attribution
=============
*/
.attribution {
  font-size: 11px;
  text-align: center;
  margin-top: 10px;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

/*
=============
Desktop style
=============
*/
@media (min-width: 900px) {
  .card {
    display: flex;
    flex-direction: row-reverse;
    height: auto;
    max-width: 800px;
  }
  .card_imgHolder {
    width: 400px;
    height: 100%;
    border-radius: 0 var(--borderRadius) var(--borderRadius) 0;
  }
  .card_content {
    max-width: 400px;
    text-align: left;
    padding: 30px 20px;
  }
  p {
    margin: 0;
  }
  .content_stats {
    display: flex;
    gap: 30px;
  }
  h1 {
    line-height: var(--lineHight);
  }
}

